recursion.cons.reverse.Reverse.scala.error
Erreur de compilation :
Reverse:4: error: value ::+ is not a member of List[Int]
  return reverse(l.tail)::+l.head
                        ^